--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -1,10 +1,5 @@
 # Sample localization file for English. Add more files in this directory for other locales.
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
-en: 
-  activerecord: 
-    models: 
-      user: Project 
-    attributes: 
-      user: 
-        minAge: "Age"
+en:
+  hello: "Hello world"
