[Issue #193] added translations for the navbar

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,3 +1,7 @@
 ar:
   hello: "ahlan wasahlan"
   arability: "عربلتي"
+  sign_up: "إنشاء حساب"
+  sign_in: "تسجيل الدخول"
+  english: "الإنجليزية"
+  arabic: "العربية"
