--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -3,3 +3,8 @@
 
 en:
   hello: "Hello world"
+  arability: "Arability"
+  sign_up: "Sign Up"
+  sign_in: "Sign In"
+  english: "English"
+  arabic: "Arabic"
