--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -2,4 +2,12 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  search: "Search Keywords"
+  search_here: "search keywords here"
+  keyword_add_success: "Keyword added to our database successfully"
+  keyword_pending: "Sorry, Keyword pending for approval"
+  keyword_in_wrong_format: "Keyword should only contain either Arabic or English characters!"
+  keyword_suggest_add: "Keyword doesn't exist in our database. Would you like to add it?"
+  click_here: "Click here"
+
+
