--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,8 +1,11 @@
 ar:
-  search: "ﺚﺤﺒﻟا"
-  search_here: "ﺎﻨﻫ ﺕﺎﻤﻠﻜﻟا ﺚﺤﺑا"
-  keyword_add_success: "ﺡﺎﺠﻨﺑ ﺔﻤﻠﻜﻟا ﺔﻓﺎﺿﺇ ﺖﻤﺗ"
-  keyword_pending: "ﺔﻘﻓاﻮﻤﻟا ﺭﺎﻈﺘﻧا ﻲﻓ ﺔﻤﻠﻜﻟا"
-  keyword_in_wrong_format: "!ﻂﻘﻓ ﺔﻴﺑﺮﻌﻟا ﻭﺃ ﺔﻳﺰﻴﻠﺠﻧﻹا ﻑﺮﺣﻷا ﻲﻠﻋ ﺔﻤﻠﻜﻟا ﻱﻮﺘﺤﺗ ﻥا ﺐﺠﻳ"
-  keyword_suggest_add: "؟ﻪﻓﺎﺿﻻا ﺩﻮﺗ ﻞﻫ ؟ﻲﺘﻴﻠﻴﺑﺮﻋ ﺕﺎﻧﺎﻴﺑ ﺓﺪﻋﺎﻗ ﻲﻓ ﻪﻤﻠﻜﻟا ﺪﺟﻮﺗ ﻻ"
-  click_here: "ﺎﻨﻫ ﻂﻐﺿا"
+  search: "اﻟﺒﺤﺚ"
+  search_here: "اﺑﺤﺚ اﻟﻜﻠﻤﺎﺕ ﻫﻨﺎ"
+  keyword_add_success: "ﺗﻤﺖ ﺇﺿﺎﻓﺔ اﻟﻜﻠﻤﺔ ﺑﻨﺠﺎﺡ"
+  keyword_pending: "اﻟﻜﻠﻤﺔ ﻓﻲ اﻧﺘﻈﺎﺭ اﻟﻤﻮاﻓﻘﺔ"
+  keyword_in_wrong_format: "!ﻳﺠﺐ اﻥ ﺗﺤﺘﻮﻱ اﻟﻜﻠﻤﺔ ﻋﻠﻲ اﻷﺣﺮﻑ اﻹﻧﺠﻠﻴﺰﻳﺔ ﺃﻭ اﻟﻌﺮﺑﻴﺔ ﻓﻘﻂ"
+  keyword_suggest_add: "ﻻ ﺗﻮﺟﺪ اﻟﻜﻠﻤﻪ ﻓﻲ ﻗﺎﻋﺪﺓ ﺑﻴﺎﻧﺎﺕ ﻋﺮﺑﻴﻠﻴﺘﻲ؟ ﻫﻞ ﺗﻮﺩ اﻻﺿﺎﻓﻪ؟"
+  click_here: "اﺿﻐﻂ ﻫﻨﺎ"
+  view_collectives: "عرض الإحصائيات الجماعية للكلمة "
+  view_stats: "الإحصائيات"
+  add_to_project: "اضف لمشروعك"
