--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -14,3 +14,6 @@ ar:
   view_collectives: "عرض الإحصائيات الجماعية للكلمة "
   view_stats: "الإحصائيات"
   add_to_project: "اضف لمشروعك"
+  words_followed_by_you: "الكلمات المتابعة:"
+  words: "كلمات"
+  unfollow: "إلغاء المتابعة"
