[issue #86] [UPDATED] adds the gender in the sign up english and arabic forms

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -22,6 +22,7 @@ ar:
   view_collectives: "عرض الإحصائيات الجماعية للكلمة "
   view_stats: "الإحصائيات"
   add_to_project: "اضف لمشروعك"
+  gender: "النوع"
   errors:
     messages:
       not_saved:
