[Issue #209][WIP] Salma fixed edit function

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -5,3 +5,18 @@ ar:
   sign_in: "تسجيل الدخول"
   english: "الإنجليزية"
   arabic: "العربية"
+  project: "مشروع"
+  projects: "مشاريع"
+  my_projects: "مشاريعي"
+  name: "الاسم"
+  category: "الصنف"
+  categories: "الاصناف"
+  formal: "رسمي"
+  slang: "غير رسمي"
+  age: "السن"
+  from: "من"
+  to: "الى"
+  desc: "عن"
+  new_project: "مشروع جديد"
+  back: "عودة"
+  edit_project: "تعديل المشروع"
