--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -8,3 +8,17 @@ en:
   sign_in: "Sign In"
   english: "English"
   arabic: "Arabic"
+  project: "Project"
+  my_projects: "My Projects"
+  name: "Name"
+  category: "Category"
+  categories: "Categories"
+  formal: "Formal"
+  slang: "Slang"
+  age: "Age"
+  from: "From"
+  to: "To"
+  desc: "Description"
+  new_project: "New Project"
+  back: "Back"
+  edit_project: "Edit Project"
