[Issue #208][WIP] Salma arabized show project

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -20,3 +20,11 @@ ar:
   new_project: "مشروع جديد"
   back: "عودة"
   edit_project: "تعديل المشروع"
+  import: "استيراد"
+  export: "تصدير"
+  add_words: "اضف كلمات"
+  recommended_words: "الكلمات المرشحة"
+  share: "مشاركة"
+  delete: "مسح"
+  word: "الكلمة"
+  meaning: "المعنى"
