--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -22,3 +22,10 @@ en:
   new_project: "New Project"
   back: "Back"
   edit_project: "Edit Project"
+  import: "Import"
+  export: "Export"
+  add_words: "Add words"
+  recommended_words: "Recommended words"
+  share: "Share"
+  delete: "Delete"
+  word: "Word"
