[issue #86] [Updated] adds arabic meanings to errors for the sign up page

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -27,5 +27,17 @@ ar:
   errors:
     messages:
       not_saved:
-        one: "خطأ واحد منع هذا %{resource} من التسجيل:"
-        other: "%{count} اخطآء منعت هذا %{resource} من التسجيل:"
+        one: "خطأ واحد منع التسجيل:"
+        other: "%{count} اخطآء منعت من التسجيل:"
+  devise:
+    registrations:
+      gamer:
+        signed_up: "تم التسجيل بنجاح"
+
+  activerecord:
+    errors:
+      models:
+        gamer:
+          attributes:
+            date_of_birth:
+              before_or_equal_to: "تاريخ الميلاد يجب ان يكون مناسب، السن يجب ان يكون ليس اقل من ١٠ سنوات و ليس آكثر من ٩٥ عاما"
