--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -9,3 +9,9 @@ ar:
   view_collectives: "عرض الإحصائيات الجماعية للكلمة "
   view_stats: "الإحصائيات"
   add_to_project: "اضف لمشروعك"
+  votes: "صوت"
+  filter: "تصفية النتائج"
+  country: "البلد"
+  age_from: "السن من"
+  age_to: "السن الي"
+  gender: "النوع"
