Added developers tab to the nav bar
 The developers tab points to the projects index page currently

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -25,7 +25,4 @@ ar:
   words_followed_by_you: "الكلمات المتابعة:"
   words: "كلمات"
   unfollow: "إلغاء المتابعة"
-  errors:
-    messages:
-      not_saved:
-
+  backend: "المطورون"
