[Issue #195][WIP] handled the case when the keyword being searched has no matches in the database

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -15,3 +15,5 @@ ar:
   age_from: "السن من"
   age_to: "السن الي"
   gender: "النوع"
+  no_synonyms_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث. "
+  follow_word: "تابع الكلمة"
