--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -18,4 +18,6 @@ en:
   age_from: "Age from:"
   age_to: "Age to:"
   gender: "Gender"
+  no_synonyms_found: "Sorry! We couldn't find the search keyword in our database. "
+  follow_word: "Follow word"
 
