[Issue #202][WIP] added the translations in file en.yml and ar.yml that will be needed later to translate title of the charts and fixed a small Issues in gamer and synonym models

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -15,3 +15,7 @@ ar:
   age_from: "السن من"
   age_to: "السن الي"
   gender: "النوع"
+  stats_gender: "احصائيات الجنس"
+  stats_country: "احصائيات البلاد"
+  stats_age: "احصائيات السن"
+  stats_education: "احصائيات التعليم"
