--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -18,10 +18,13 @@ ar:
   keyword_in_wrong_format: "!ﻳﺠﺐ اﻥ ﺗﺤﺘﻮﻱ اﻟﻜﻠﻤﺔ ﻋﻠﻲ اﻷﺣﺮﻑ اﻹﻧﺠﻠﻴﺰﻳﺔ ﺃﻭ اﻟﻌﺮﺑﻴﺔ ﻓﻘﻂ"
   keyword_suggest_add: "ﻻ ﺗﻮﺟﺪ اﻟﻜﻠﻤﻪ ﻓﻲ ﻗﺎﻋﺪﺓ ﺑﻴﺎﻧﺎﺕ ﻋﺮﺑﻴﻠﻴﺘﻲ؟ ﻫﻞ ﺗﻮﺩ اﻻﺿﺎﻓﻪ؟"
   click_here: "اﺿﻐﻂ ﻫﻨﺎ"
+  no_followed_words: "لا توجد كلمات متابعة."
+  unfollow_keyword_alert: "لقد تم إلغاء متابعة هذه الكلمة:"
   view_collectives: "عرض الإحصائيات الجماعية للكلمة "
   view_stats: "الإحصائيات"
   add_to_project: "اضف لمشروعك"
   words_followed_by_you: "الكلمات المتابعة:"
+  followed_words: "الكلمات المتابعة"
   words: "كلمات"
   unfollow: "إلغاء المتابعة"
   backend: "المطورون"
