--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -13,11 +13,14 @@ en:
   keyword_pending: "Sorry, Keyword pending for approval"
   keyword_in_wrong_format: "Keyword should only contain either Arabic or English characters!"
   keyword_suggest_add: "Keyword doesn't exist in our database. Would you like to add it?"
+  unfollow_keyword_alert: "This word has been succesfully unfollowed: "
   click_here: "Click here"
+  no_followed_words: "You are not following any words."
   view_collectives: "Viewing collective statistics for word "
   view_stats: "View Stats"
   add_to_project: "Add to project"
   words_followed_by_you: "Words followed by you:"
+  followed_words: "Followed Words"
   words: "Words"
   unfollow: "Unfollow"
   backend: "Developers"
