[Issue #195][WIP] updated keyword add if not found, but still failure scenarios need update

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -15,5 +15,7 @@ ar:
   age_from: "السن من"
   age_to: "السن الي"
   gender: "النوع"
-  no_synonyms_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث. "
+  no_synonyms_found: "عفوا! لا توجد بقاعدة البيانات معاني تطابق كلمة البحث. "
   follow_word: "تابع الكلمة"
+  keyword_not_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث."
+  add_word: "اضف الكلمة"
