[Issue #202][WIP] added the view stats part to the search view and the related method in the search helper

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -21,3 +21,4 @@ ar:
   stats_country: "احصائيات البلاد"
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
+  stats_no_votes: "عذرا هنا المعني لم يحصل علي اي اصوات بعد"
