[WIP] Arabized signin page and drop down

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -5,6 +5,8 @@ en:
   arability: "Arability"
   sign_up: "Sign Up"
   sign_in: "Sign In"
+  email: "Email"
+  password: "Password"
   english: "English"
   arabic: "Arabic"
   search: "Search Keywords"
