--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -71,6 +71,13 @@ ar:
     registrations:
       gamer:
         signed_up: "تم التسجيل بنجاح"
+    sessions:
+      gamer:
+        signed_in: "لقد تم تسجيل الدخول بنجاح"
+        signed_out: "لقد تم تسجيل الخروج بنجاح"
+    failure:
+      gamer:
+        invalid: "لقد ادخلت بيانات غير صحيحة، يرجى إعادة المحاولة "
   activerecord:
     errors:
       models:
