--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -86,4 +86,4 @@ ar:
   stats_country: "احصائيات البلاد"
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
-  stats_no_votes: "عذرا هنا المعني لم يحصل علي اي اصوات بعد"
+  stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
