--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -13,7 +13,8 @@ en:
   keyword_pending: "Sorry, Keyword pending for approval"
   keyword_in_wrong_format: "Keyword should only contain either Arabic or English characters!"
   keyword_suggest_add: "Keyword doesn't exist in our database. Would you like to add it?"
-  unfollow_keyword_alert: "This word has been succesfully unfollowed: "
+  unfollow_keyword_alert: "This word has been succesfully unfollowed:"
+  follow_keyword_alert: "This word has been succesfully followed:"
   click_here: "Click here"
   no_followed_words: "You are not following any words."
   view_collectives: "Viewing collective statistics for word "
@@ -53,6 +54,10 @@ en:
   word: "Word"
   help: "Help"
   enter_as_csv: "Enter as csv"
+  follow_word_link: "If you don't like these synonyms or want updates to this word, you can always"
+  follow_word_end_of_search: "follow the word!"
+  follow_keyword_alert_fail: "This word is already followed:"
+  no_votes_for_word: "No votes exsist for this word"
 
   no_synonyms_found: "Sorry! We couldn't find the search keyword in our database. "
   follow_word: "Follow word"
