[Issue #179] [WIP] arabizes adding words to project

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -94,3 +94,10 @@ ar:
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
+  Add_words: "إضافة كلمات"
+  Synonym_changed_successfully: "تم تغيير المعنى بنجاح."
+  Failed_to_update_synonym: "فشل تحديث المعنى."
+  synonym_does_not_exist: "المعنى الذي اخترته غير موجود."
+  successfully_added_word_to_project: "تمت إضافة الكلمة بنجاح."
+  failed_to_add_word_to_project: "فشل إضافة الكلمة لمشروعك."
+  word_does_not_exist: "الكلمة التي تحاول اضافتها غير موجودة"
