[Issue #188] [WIP] arabizes exporting project's data

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -94,3 +94,4 @@ ar:
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
+  file: "ملف"
