[Issue #195][WIP] modified translations in the translation yml files

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -13,12 +13,15 @@ en:
   view_stats: "View Stats"
   add_to_project: "Add to project"
   votes: "votes"
-  filer: "Filter results"
-  country: "Country"
+  filter: "Filters"
+  country: "Country:"
   age_from: "Age from:"
-  age_to: "Age to:"
-  gender: "Gender"
+  age_to: "to:"
+  gender: "Gender:"
   no_synonyms_found: "Sorry! We couldn't find synonyms matching the search keyword in our database. "
   follow_word: "Follow word"
   keyword_not_found: "Sorry! We couldn't find the search keywords in our database. "
   add_word: "Add Keyword"
+  female: "female"
+  male: "male"
+  out_of: "from"
