--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -19,3 +19,6 @@ ar:
   follow_word: "تابع الكلمة"
   keyword_not_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث."
   add_word: "اضف الكلمة"
+  female: "انثي"
+  male: "ذكر"
+  out_of: "من"
