[Issue #179] [WIP] finishes adding words to project and changing synonyms of an existing word

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -80,3 +80,10 @@ en:
   follow_word: "Follow word"
   keyword_not_found: "Sorry! We couldn't find the search keywords in our database. "
   add_word: "Add Keyword"
+  Add_words: "Add words"
+  Synonym_changed_successfully: "Synonym changes successfully."
+  Failed_to_update_synonym: "Failed to update synonym."
+  synonym_does_not_exist: "The synonym you chose does not exist."
+  successfully_added_word_to_project: "Word added successfully."
+  failed_to_add_word_to_project: "Failed to add word to project."
+  word_does_not_exist: "The word you're trying to add does not exist."
