--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -108,3 +108,10 @@ ar:
   follow_word: "تابع الكلمة"
   keyword_not_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث."
   add_word: "اضف الكلمة"
+  Add_words: "إضافة كلمات"
+  Synonym_changed_successfully: "تم تغيير المعنى بنجاح."
+  Failed_to_update_synonym: "فشل تحديث المعنى."
+  synonym_does_not_exist: "المعنى الذي اخترته غير موجود."
+  successfully_added_word_to_project: "تمت إضافة الكلمة بنجاح."
+  failed_to_add_word_to_project: "فشل إضافة الكلمة لمشروعك."
+  word_does_not_exist: "الكلمة التي تحاول اضافتها غير موجودة"
