[Issue #202][WIP] added the view stats/hide stats on click and reduced the height of the visuals area

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -24,4 +24,5 @@ ar:
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هنا المعني لم يحصل علي اي اصوات بعد"
+  hide_stats: "اخفاء الإحصائيات"
 
