--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -27,4 +27,5 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
+  hide_stats: "Hide Stats"
 
