--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -72,6 +72,27 @@ ar:
   follow_word_end_of_search: "إضغط هنا!"
   follow_keyword_alert_fail: "هذه الكلمة متابعة:"
   no_votes_for_word: "عذراً معاني هذه الكلمة لم تحصل على أي أصوات بعد."
+  choose_keyword_title: "اختار من الكلمات التالية ليتم اضافتها إلى هذا المشروع"
+  choose_keyword_remaining: "تبقى لك عدد"
+  choose_keywords_remaining2: "كلمة"
+  choose_keyword_table_title: "الكلمة"
+  choose_keyword_table_title2: "المعاني"
+  choose_keyword_table_span: "*جديدة*"
+  choose_keyword_submit: "اضف إلى المشروع"
+  import_csv_title: "استيراد ملف كلمات بصيغة CSV"
+  import_csv_choose_file: "اختيار الملف"
+  import_csv_change_file: "تغيير الملف"
+  import_csv_remove_file: "الغاء"
+  import_csv_submit: "تحميل الملف"
+  import_csv_list1: "لا يجب ان تحتوى الكلمات على ارقام"
+  import_csv_list2: "المعانى غير العربية لن يتم قبولها"
+  import_csv_list3: "يجب ان يكون الملف UTF-8 و بصيغة CSV"
+  java_script_disabled: "كن أكثر ذكاء من ذلك"
+  upload_file_error1: "انت لم تقم بإختيار ملف"
+  upload_file_error2: "هذا الملف ليس بتقنية UTF-8"
+  upload_file_error3: "يوجد خطأ بهذا الملف"
+  upload_file_error4: "هذا الملف ليس CSV"
+  upload_file_error5: "لا يوجد كلمات بامكانك اضافتها إلى هذا المشروع"
 
   errors:
     messages:
