[MC] Salma added words in the ar.yml and en.yml

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -43,6 +43,7 @@ ar:
   to: "الى"
   desc: "عن"
   new_project: "مشروع جديد"
+  create_project: "انشاء مشروع"
   back: "عودة"
   edit_project: "تعديل المشروع"
   import: "استيراد"
