--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -108,3 +108,14 @@ en:
   upload_file_error3: "This file is corrupted"
   upload_file_error4: "This file is not in csv format"
   upload_file_error5: "There are no words to be added to this project"
+  projects_index_error1: "Please sign up as a developer first"
+  projects_index_error2: "Please sign in"
+  projects_index_title: "Projects"
+  projects_index_tab1: "My projects"
+  projects_index_tab2: "Projects shared with me"
+  projects_index_add: " Add a project"
+  projects_index_name: "Name: "
+  projects_index_categories: "Categories: "
+  projects_index_description: "Description: "
+  projects_index_edit: " edit"
+  projects_index_no_shared_projects: "There are no projects shared with you"
