--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -119,3 +119,6 @@ en:
   projects_index_description: "Description: "
   projects_index_edit: " edit"
   projects_index_no_shared_projects: "There are no projects shared with you"
+  remove_from_project: "Remove from project"
+  word_removed_successfully: "Word removed successfully."
+  word_does_not_exist: "The word you're trying to remove does not exist."
