--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -151,3 +151,7 @@ ar:
   remove_from_project: "إزالة من المشروع"
   word_removed_successfully: "تم إزالة الكلمة بنجاح."
   word_does_not_exist: "الكلمة التي تحاول اضافتها غير موجودة"
+  not_developer: "يجب أن تشترك كمطور قبل أن تستطيع الإكمال."
+  no_words: "لا يوجد كلمات لاستيرادها."
+  no_project: "المشروع الذي تحاول استيراده غير موجود."
+  file: "ملف"
