--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -120,6 +120,17 @@ en:
   projects_index_description: "Description: "
   projects_index_edit: " edit"
   projects_index_no_shared_projects: "There are no projects shared with you"
+  add_word: "Add word"
+  Add_words: "Add words"
+  Synonym_changed_successfully: "Synonym changed successfully."
+  Failed_to_update_synonym: "Failed to update synonym."
+  synonym_does_not_exist: "Synonym does not exist."
+  successfully_added_word_to_project: "Successfully added word to project."
+  failed_to_add_word_to_project: "Failed to add word to project."
+  word_does_not_exist: "Word does not exist."
   remove_from_project: "Remove from project"
   word_removed_successfully: "Word removed successfully."
-  word_does_not_exist: "The word you're trying to remove does not exist."
+  not_developer: "You have to register as a developer before proceeding."
+  no_words: "No words to export."
+  no_project: "Project does not exist!"
+  file: "file"
