--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
-
-
   hello: "Hello world"
+  nil_prizes: "You have requested invalid data."
+  warning: "Warning!"
+  won_prizes: "Congratulations! You have won these prizes"
