--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -45,7 +45,7 @@ ar:
   new_project: "مشروع جديد"
   create_project: "انشاء مشروع"
   back: "عودة"
-  edit_project: "تعديل المشروع"
+  edit_project: "حفظ المشروع"
   import: "استيراد"
   export: "تصدير"
   add_words: "اضف كلمات"
@@ -106,7 +106,7 @@ ar:
   projects_index_edit: " تعديل"
   projects_index_no_shared_projects: "ليس لديك أي مشاريع مشتركة"
   error: "اخطاء"
-  prohibited_project_flash: "اخطاء منعت عملية الحفظ"
+  prohibited_project_error: "اخطاء منعت عملية الحفظ"
   success: "اسشرلايبتاش"
 
   errors:
@@ -157,3 +157,4 @@ ar:
   successfully_added_word_to_project: "تمت إضافة الكلمة بنجاح."
   failed_to_add_word_to_project: "فشل إضافة الكلمة لمشروعك."
   word_does_not_exist: "الكلمة التي تحاول اضافتها غير موجودة"
+  not_in_range: "ليس في الحدود المسموح بها"
