[ISSUE #180][WIP] reverts my deleted commit

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -103,3 +103,5 @@ ar:
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
   connect_to: "تواصل مع"
   facebook: "فيسبوك"
+  my_info: "معلوماتي"
+  social_media: "التواصل الاجتماعي"
