--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -72,6 +72,8 @@ en:
   stats_no_votes: "Sorry! this synonym has no votes yet!"
   connect_to: "Connect to"
   facebook: "facebook"
+  my_info: "My يnformation"
+  social_media: "Social Media"
 
 
   hello: "Hello world"
