--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -72,7 +72,7 @@ en:
   stats_no_votes: "Sorry! this synonym has no votes yet!"
   connect_to: "Connect to"
   facebook: "facebook"
-  my_info: "My يnformation"
+  my_info: "My Information"
   social_media: "Social Media"
 
 
