[WIP] Ararbized views

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -103,3 +103,5 @@ ar:
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
   nil_prizes:  "حاولت طلب بيانات غير صالحة."
   warning: "تحذير!"
+  won_prizes: "مبروك! لقد فزت الجوائز التالية!"
+  sign_in_first: "سجل دخولك أو إشترك لكي تربح جوائز أو لتحقيق إنجازات"
