--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -101,3 +101,4 @@ ar:
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
+  scored: "لقد سجلت النقاط التالية "
