--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -70,6 +70,12 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
-
-
   hello: "Hello world"
+  warning: "Warning!"
+  nil_prizes: "You have requested invalid data."
+  nil_trophies: "You have requested invalid data."
+  won_prizes: "Congratulations! You have won these prizes"
+  sign_in_first: "Sign in or register first to view this page"
+  scored: "You have scored "
+  congrats_prizes: "Congratulations! You have one the following prizes"
+
