--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -13,7 +13,7 @@ ar:
   filter: "تصفية النتائج"
   country: "البلد"
   age_from: "السن من"
-  age_to: "السن الي"
+  age_to: "الي"
   gender: "النوع"
   no_synonyms_found: "عفوا! لا توجد بقاعدة البيانات معاني تطابق كلمة البحث. "
   follow_word: "تابع الكلمة"
