[WIP] Finished arabization and documentation

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -101,3 +101,9 @@ ar:
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
+  must_sign_in: "سجل دخولك أو إشترك لكي تري الجوائز  او الانجازات"
+  trophies_won: "الانجازات التي تم الحصول عليها"
+  trophies_not_won: "الانجازات التي يمكنك الحصول عليها"
+  level: "المرحلة"
+  score: "النقاط"
+
