[Issue #92] added tests and integrated in search view

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -95,3 +95,4 @@ en:
   male: "male"
   out_of: "from"
   keyword_not_empty: "Search Keyword can not be empty"
+  enter_categories: "filter by categories"
