[ISSUE #184][WIP] chcks for facebook connection and disconnection

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -102,6 +102,7 @@ ar:
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
   connect_to: "تواصل مع"
+  disconnect_from: "افصل تواصلك مع"
   facebook: "فيسبوك"
   my_info: "معلوماتي"
   social_media: "التواصل الاجتماعي"
