--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -71,6 +71,7 @@ en:
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
   connect_to: "Connect to"
+  disconnect_from: "Disconnect from"
   facebook: "facebook"
   my_info: "My Information"
   social_media: "Social Media"
