[Issue #92] Fixed missing translation

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -106,3 +106,4 @@ ar:
   male: "ذكر"
   out_of: "من"
   keyword_not_empty: "يجب الا يكون مكان الكلمة فارغ"
+  enter_categories: "ﺎﻠﺘﺼﻔﻳﺓ ﺢﺴﺑ ﺎﻠﻔﺋﺎﺗ"
