--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -70,3 +70,18 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
+  activerecord:
+    errors:
+      models:
+        keyword:
+          attributes:
+            name:
+              blank: "keyword cant be empty"
+              invalid: "The keyword can only consist of only english and arabic characters"
+              taken: "This keyword already exists in the database"
+        category:
+          attributes:
+            name:
+              blank: "category cant be empty"
+              invalid: "The category can only consist of only english and arabic characters"
+              taken: "This category already exists in the database"
