[ISSUE #184][WIP] arabizes flash notices

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -106,4 +106,9 @@ ar:
   facebook: "فيسبوك"
   my_info: "معلوماتي"
   social_media: "التواصل الاجتماعي"
+  logged_in_to_fb: "مبروك!! لقد تمت عملية التواصل بنجاح. تمتع بخاصياتك الجديدة."
+  logged_out_of_fb: "تم فصل الفيس بنجاح"
+  shared_on_fb: "مبروك فزت بجائزة الحلوى"
+  error_fb: "شكرا و لكن لا نريد فشخ التايملاين الخاص بك"
+  connect_your_account: "يبدو ان حسابك غير متصل بفيسبوك. اضغط على التواصل الاجتماعي و وصل."
 
