--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -70,3 +70,4 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
+  register_developer: "Please register as a developer first"
