[WIP] fixed minor localization

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -102,3 +102,5 @@ ar:
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
   scored: "لقد سجلت النقاط التالية "
+  to_prizes: "إلى الجوائز"
+  to_voting: "إلى صفحة التصويت"
