--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -78,4 +78,5 @@ en:
   sign_in_first: "Sign in or register first to view this page"
   scored: "You have scored "
   congrats_prizes: "Congratulations! You have one the following prizes"
-
+  to_prizes: "To Prizes"
+  to_voting: "To Voting Page"
