[WIP] Fixed arabization minor issue and added image tag

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -105,3 +105,4 @@ ar:
   warning: "تحذير!"
   won_prizes: "مبروك! لقد فزت الجوائز التالية!"
   sign_in_first: "سجل دخولك أو إشترك لكي تربح جوائز أو لتحقيق إنجازات"
+  to_voting: "إلى صفحة التصويت "
