--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -75,3 +75,4 @@ en:
   warning: "Warning!"
   won_prizes: "Congratulations! You have won these prizes"
   sign_in_first: "Sign in or register first to view this page"
+  to_voting: "To Voting Page"
