--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -102,6 +102,8 @@ en:
   import_csv_list1: "Words should not contain any numbers"
   import_csv_list2: "Non-arabic synonyms will not be accepted"
   import_csv_list3: "The file has to be in csv format and UTF-8 encoded"
+  import_csv_list4: "You can import more than one synonym for a keyword but the first one will be used in your project"
+  import_csv_list5: "Tou can change the synonym later"
   java_script_disabled : "Be smarter than that"
   upload_file_error1: "You did not choose a file"
   upload_file_error2: "This file is not UTF-8 encoded"
@@ -122,3 +124,4 @@ en:
   remove_from_project: "Remove from project"
   word_removed_successfully: "Word removed successfully."
   word_does_not_exist: "The word you're trying to remove does not exist."
+  description_choose_keywords: "The red synonym will be imported to your project"
