--- a/arability/config/locales/devise.ar.yml
+++ b/arability/config/locales/devise.ar.yml
@@ -6,7 +6,7 @@ ar:
       already_confirmed: "تم تأكيده مسبقاً، حاول تسجيل الدخول من فضلك"
       not_locked: "لم يتم إغلاقه"
       not_saved:
-        one: "الخطأ التالي منع ٪{resource} من أن يحفظ:"
+        one: "الخطأ التالي منع %{resource} من أن يحفظ:"
         other: " الأخطاء الـ %{count} التالية منعت %{resource} من أن يحفظ:"
   activerecord:
     attributes:
