--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -123,3 +123,4 @@ en:
   remove_from_project: "Remove from project"
   word_removed_successfully: "Word removed successfully."
   word_does_not_exist: "The word you're trying to remove does not exist."
+  no_words_in_project: "Project has now words yet."
