[issue #177][WIP]added translation to messege

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -108,3 +108,4 @@ ar:
   out_of: "من"
   keyword_not_empty: "يجب الا يكون مكان الكلمة فارغ"
   enter_categories: "ﺎﻠﺘﺼﻔﻳﺓ ﺢﺴﺑ ﺎﻠﻔﺋﺎﺗ"
+  follow_words_info: "إتبع كلمات لتلقي بريد إلكتروني بمعلومات جديدة عن كلماتك. سيصلك بريد إن حصلت كلمة على مرادفات جديدة أو إحدى المرادفات حصلت على أكثر عدد من أصوات."
