--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -86,3 +86,4 @@ en:
   keyword_not_empty: "Search Keyword can not be empty"
   enter_categories: "filter by categories"
   register_developer: "Please register as a developer first"
+  follow_words_info: "Follow a word to recieve an email with every update. Updates include a new Synonym addition to a Keyword or the top voted Synonym gets changed."
