[Issue 85] [WIP] enhances developer registration view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -165,6 +165,8 @@ ar:
   register_as_developer: "أدخل بياناتك للاشتراك كمطور"
   next: "التالي"
   done: "إنتهاء"
+  first_name: "الاسم الاول"
+  last_name: "إسم العائلة"
   activerecord:
     models:
       developer: "مطور"
