--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -104,3 +104,4 @@ ar:
   scored: "لقد سجلت النقاط التالية "
   to_prizes: "إلى الجوائز"
   to_voting: "إلى صفحة التصويت"
+  restart_game: "إعادة اللعبة"
