--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -80,3 +80,5 @@ en:
   congrats_prizes: "Congratulations! You have one the following prizes"
   to_prizes: "To Prizes"
   to_voting: "To Voting Page"
+  to_next_level: "To Next Level"
+  restart_game: "Restart Game" 
