[Issue #94] fixed sending of errors

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -120,3 +120,4 @@ ar:
   out_of: "من"
   keyword_not_empty: "يجب الا يكون مكان الكلمة فارغ"
   enter_categories: "ﺎﻠﺘﺼﻔﻳﺓ ﺢﺴﺑ ﺎﻠﻔﺋﺎﺗ"
+  enter_keyword: "أدخل كلمة"
