--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -109,3 +109,4 @@ en:
               blank: "category cant be empty"
               invalid: "The category can only consist of only english and arabic characters"
               taken: "This category already exists in the database"
+  enter_keyword: "Enter a keyword"
