--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -101,10 +101,8 @@ ar:
   stats_age: "احصائيات السن"
   stats_education: "احصائيات التعليم"
   stats_no_votes: "عذرا هذا المعني لم يحصل علي اي اصوات بعد!!"
-  sign_in_first: "سجل دخولك أو إشترك لكي تري الجوائز  او الانجازات"
-  earned_prizes: "الجوائز التي تم الحصول عليها"
-  available_prizes: "الجوائز التي بإمكانك الحصول عليه"
-  didnt_win_prizes: "لم تربح أي جوائز حت الآن"
-  won_all_prizes: "لقد ربحت كل الجوائز"
-  level: "المرحلة"
-  score: "النقاط"
+  scored: "لقد سجلت النقاط التالية "
+  to_prizes: "إلى الجوائز"
+  to_voting: "إلى صفحة التصويت"
+  restart_game: "إعادة اللعبة"
+  back_to_game: "الرجوع إلى اللعبة"
