--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -15,8 +15,8 @@ en:
   keyword_pending: "Sorry, Keyword pending for approval"
   keyword_in_wrong_format: "Keyword should only contain either Arabic or English characters!"
   keyword_suggest_add: "Keyword doesn't exist in our database. Would you like to add it?"
-  unfollow_keyword_alert: "This word has been succesfully unfollowed:"
   follow_keyword_alert: "This word has been succesfully followed:"
+  unfollow_keyword_alert: "This word has been succesfully unfollowed: "
   click_here: "Click here"
   no_followed_words: "You are not following any words."
   view_collectives: "Viewing collective statistics for word "
@@ -56,7 +56,6 @@ en:
   word: "Word"
   help: "Help"
   enter_as_csv: "Enter as csv"
-
   follow_word_link: "If you don't like these synonyms or want updates to this word, you can always"
   follow_word_end_of_search: "follow the word!"
   follow_keyword_alert_fail: "This word is already followed:"
@@ -70,6 +69,14 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
+  hello: "Hello world"
+  warning: "Warning!"
+  nil_prizes: "You have requested invalid data."
+  nil_trophies: "You have requested invalid data."
+  won_prizes: "Congratulations! You have won these prizes"
+  sign_in_first: "Sign in or register first to view this page"
+  scored: "You have scored "
+  congrats_prizes: "Congratulations! You have one the following prizes"
   sign_in_first: "Please sign in first to view this page"
   hello: "Hello world"
   earned_prizes: "Prizes that you have earned"
@@ -78,3 +85,15 @@ en:
   won_all_prizes: "You have won all prizes"
   level: "Level"
   score: "Score"
+  must_sign_in: "Please sign in first to view this page"
+  hello: "Hello world"
+  trophies_won: "Trophies earned"
+  trophies_not_won: "Trophies you haven't won yet"
+  didnt_win_trophies: "You haven't won any trophies for now"
+  score: "Score"
+  level: "Level"
+  to_prizes: "To Prizes"
+  to_voting: "To Voting Page"
+  to_next_level: "To Next Level"
+  restart_game: "Restart Game"
+  back_to_game: "Back to Game"
