--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -30,9 +30,11 @@ en:
 
   project: "Project"
   my_projects: "My Projects"
+  required: "The fields marked with * are required"
   name: "Name"
   category: "Category"
   categories: "Categories"
+  formality: "Formality"
   formal: "Formal"
   slang: "Slang"
   age: "Age"
@@ -55,6 +57,7 @@ en:
   age_to: "Age to:"
   gender: "Gender"
   error: "error"
+  cancel: "Cancel"
   prohibited_project_error: "errors prohibited this project from being saved:"
   not_in_range: "is not in range"
   views:
@@ -150,3 +153,5 @@ en:
         name: 'Name'
         minAge: 'The minimum age'
         maxAge: 'The maximum age'
+        categories: "Categories"
+        description: "Description"
