--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -69,6 +69,7 @@ ar:
   follow_word_end_of_search: "إضغط هنا!"
   follow_keyword_alert_fail: "هذه الكلمة متابعة:"
   no_votes_for_word: "عذراً معاني هذه الكلمة لم تحصل على أي أصوات بعد."
+  select subscription: "إختر"
 
   errors:
     messages:
