--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -140,6 +140,16 @@ ar:
        flash_messages:
          project_was_successfully_created: 'تم انشاء المشروع بنجاح!'
          project_was_successfully_updated: 'تم حفظ المشروع بنجاح'
+  controller:
+    my_subscription:
+        flash_messages:
+         you_cant_share_the_project_with_yourself: 'لا يمكن مشاركة هذا المشروع مع نفسك'
+         Email_for_a_gamer_not_a_developer: 'هذا البريد الالكتروني ليس لمطور'
+         project_has_been_successfully_shared: 'لقد تم مشاركة هذا المشروع بنجاح '
+         already_shared:'تم مشاركة هذا المشروع سابقا'
+         Email_doesnt_exist: 'هذا البريد الالكتروني غير صحيح'
+         developer_unshared: 'مت عدم مشاركة المشروع'
+
   keyword_not_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث."
   add_word: "اضف الكلمة"
   stats_gender: "احصائيات الجنس"
