[ISSUE #180][ISSUE #184][WIP] adds documentation

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -110,4 +110,4 @@ ar:
   shared_on_fb: "مبروك فزت بجائزة الحلوى"
   error_fb: "شكرا و لكن لا نريد ان نحتل التايملاين الخاص بك"
   connect_your_account: "يبدو ان حسابك غير متصل بفيسبوك. اضغط على التواصل الاجتماعي و وصل."
-
+  sign_in_facebook: "يجب ان تسجل دخولك قبل المتابعة"
