--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -87,3 +87,4 @@ en:
   enter_categories: "filter by categories"
   register_developer: "Please register as a developer first"
   follow_words_info: "Follow a word to recieve an email with every update. Updates include a new Synonym addition to a Keyword or the top voted Synonym gets changed."
+  synonyms_of: "Synonyms of"
