[Issue #174][WIP] fixed back to game

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -96,4 +96,4 @@ en:
   to_voting: "To Voting Page"
   to_next_level: "To Next Level"
   restart_game: "Restart Game"
-  back_to_game: "Back to Game"
+  back_to_game: "Back"
