[Issue #165][WIP] Fixed to voting instead of to next level

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -104,4 +104,5 @@ ar:
   scored: "لقد سجلت النقاط التالية "
   to_prizes: "إلى الجوائز"
   to_voting: "إلى صفحة التصويت"
+  to_next_level: "إلى المرحلة التالية"
   restart_game: "إعادة اللعبة"
