--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -20,7 +20,7 @@ en:
   view_stats: "View Stats"
   add_to_project: "Add to project"
   votes: "votes"
-  filter: "Filters"
+  filter: "Filter Votes:"
   country: "Country:"
   age_from: "Age from:"
   age_to: "to:"
@@ -84,7 +84,6 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
-  filter: "Filters"
   country: "Country:"
   age_from: "Age from:"
   age_to: "to:"
