[Issue #202][WIP] modified documentation, changed the search_helper, added some translations in the UMLs and added tests

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -105,3 +105,23 @@ ar:
   male: "ذكر"
   out_of: "من"
   keyword_not_empty: "يجب الا يكون مكان الكلمة فارغ"
+  egypt: "مصر"
+  lebanon: "لبنان"
+  jordan: "الاردن"
+  saudi_arabia: "السعودية"
+  libya: "ليبيا"
+  united_arab_emirates: "الامارات"
+  qatar: "قطر"
+  kuwait: "الكويت"
+  iraq: "العراق"
+  algeria: "الجزائر"
+  morroco: "المغرب"
+  sudan: "السودان"
+  somalia: "الصومال"
+  mauritania: "موريتانيا"
+  bahrain: "البحرين"
+  tunisia: "تونس"
+  others: "بلاد اخري"
+  graduate: "خريج"
+  school: "مدرسة"
+  university: "جامعة"
