--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -79,3 +79,23 @@ en:
   male: "male"
   out_of: "from"
   keyword_not_empty: "Search Keyword can not be empty"
+  egypt: "Egypt"
+  lebanon: "Lebanon"
+  jordan: "Jordan"
+  saudi_arabia: "Saudi Arabia"
+  libya: "Libya"
+  united_arab_emirates: "United Arab Emirates"
+  qatar: "Qatar"
+  kuwait: "Kuwait"
+  iraq: "Iraq"
+  algeria: "Algeria"
+  morroco: "Morroco"
+  sudan: "Sudan"
+  somalia: "Somalia"
+  mauritania: "Mauritania"
+  bahrain: "Bahrain"
+  tunisia: "Tunisia"
+  others: "Others"
+  graduate: "Graduate"
+  school: "School"
+  university: "University"
